src/test/ui/rfc-2632-const-trait-impl/stability.stderr
error: trait methods cannot be stable const fn
  --> $DIR/stability.rs:13:5
   |
LL | /     fn sub(self, rhs: Self) -> Self {
LL | |
LL | |         Int(self.0 - rhs.0)
LL | |     }
   | |_____^

error: `<Int as Add>::add` is not yet stable as a const fn
  --> $DIR/stability.rs:31:5
   |
LL |     Int(1i32) + Int(2i32)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 2 previous errors

